// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayModal should render a modal opened 1`] = `
<div class="fade modal d-block show" role="dialog" tabindex="-1">
  <div class="modal-dialog">
    <div class="modal-content">
      <div class="modal-header">
        <div class="modal-title">My Title</div>
        <button class="btn close btn-unstyled" aria-label="times">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <title>times</title>
            <use xlink:href="icons.svg#times"></use>
          </svg>
        </button>
      </div>
      <div class="modal-body">
        <h4>Hello world!</h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal opened using the method show 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog">
    <div class="modal-content">
      <div class="modal-header">
        <div class="modal-title">My Title</div>
        <button class="btn close btn-unstyled" aria-label="times">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <title>times</title>
            <use xlink:href="icons.svg#times"></use>
          </svg>
        </button>
      </div>
      <div class="modal-body">
        <h4>Hello world!</h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal opened using the method show 2`] = `
<div class="fade modal d-block show" role="dialog" tabindex="-1">
  <div class="modal-dialog">
    <div class="modal-content">
      <div class="modal-header">
        <div class="modal-title">My Title</div>
        <button class="btn close btn-unstyled" aria-label="times">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <title>times</title>
            <use xlink:href="icons.svg#times"></use>
          </svg>
        </button>
      </div>
      <div class="modal-body">
        <h4>Hello world!</h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with body 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog">
    <div class="modal-content">
      <div class="modal-body">My body</div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with classes 1`] = `
<div class="fade modal my-custom-class" role="dialog" tabindex="-1">
  <div class="modal-dialog">
    <div class="modal-content"></div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with footer buttons 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog">
    <div class="modal-content">
      <div class="modal-footer">
        <div class="modal-item-first"></div>
        <div class="modal-item-last">
          <button class="btn close-modal btn-secondary" type="button">Cancel</button>
          <button class="btn btn-primary">Save</button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with footer buttons aligned to left and right 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog">
    <div class="modal-content">
      <div class="modal-footer">
        <div class="modal-item-first">
          <button class="btn btn-secondary" type="button">My button 1</button>
          <button class="btn btn-secondary" type="button">My button 2</button>
        </div>
        <div class="modal-item-last">
          <button class="btn close-modal btn-secondary" type="button">Cancel</button>
          <button class="btn btn-primary">Save</button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with id 1`] = `
<div class="fade modal" id="myId" role="dialog" tabindex="-1">
  <div class="modal-dialog">
    <div class="modal-content"></div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with iframe as body 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog">
    <div class="modal-content">
      <div class="modal-body modal-body-iframe">
        <iframe src="http://www.claycss.com" title="http://www.claycss.com"></iframe>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with size \`full-screen\` 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog modal-full-screen">
    <div class="modal-content">
      <div class="modal-header">
        <div class="modal-title">My Title</div>
        <button class="btn close btn-unstyled" aria-label="times">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <title>times</title>
            <use xlink:href="icons.svg#times"></use>
          </svg>
        </button>
      </div>
      <div class="modal-body">
        <h4>Hello world!</h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with size \`large\` 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog modal-lg">
    <div class="modal-content">
      <div class="modal-header">
        <div class="modal-title">My Title</div>
        <button class="btn close btn-unstyled" aria-label="times">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <title>times</title>
            <use xlink:href="icons.svg#times"></use>
          </svg>
        </button>
      </div>
      <div class="modal-body">
        <h4>Hello world!</h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with size \`small\` 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog modal-sm">
    <div class="modal-content">
      <div class="modal-header">
        <div class="modal-title">My Title</div>
        <button class="btn close btn-unstyled" aria-label="times">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <title>times</title>
            <use xlink:href="icons.svg#times"></use>
          </svg>
        </button>
      </div>
      <div class="modal-body">
        <h4>Hello world!</h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with status \`danger\` and title 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog modal-danger">
    <div class="modal-content">
      <div class="modal-header">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-full">
          <title>exclamation-full</title>
          <use xlink:href="icons.svg#exclamation-full"></use>
        </svg>
        <div class="modal-title">My Title</div>
        <button class="btn close btn-unstyled" aria-label="times">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <title>times</title>
            <use xlink:href="icons.svg#times"></use>
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with status \`info\` and title 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog modal-info">
    <div class="modal-content">
      <div class="modal-header">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle">
          <title>info-circle</title>
          <use xlink:href="icons.svg#info-circle"></use>
        </svg>
        <div class="modal-title">My Title</div>
        <button class="btn close btn-unstyled" aria-label="times">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <title>times</title>
            <use xlink:href="icons.svg#times"></use>
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with status \`success\` and title 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog modal-success">
    <div class="modal-content">
      <div class="modal-header">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-check-circle">
          <title>check-circle</title>
          <use xlink:href="icons.svg#check-circle"></use>
        </svg>
        <div class="modal-title">My Title</div>
        <button class="btn close btn-unstyled" aria-label="times">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <title>times</title>
            <use xlink:href="icons.svg#times"></use>
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with status \`warning\` and title 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog modal-warning">
    <div class="modal-content">
      <div class="modal-header">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-question-circle-full">
          <title>question-circle-full</title>
          <use xlink:href="icons.svg#question-circle-full"></use>
        </svg>
        <div class="modal-title">My Title</div>
        <button class="btn close btn-unstyled" aria-label="times">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <title>times</title>
            <use xlink:href="icons.svg#times"></use>
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with title 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog">
    <div class="modal-content">
      <div class="modal-header">
        <div class="modal-title">My title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render a modal with title and header closing button 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog">
    <div class="modal-content">
      <div class="modal-header">
        <div class="modal-title">My title</div>
        <button class="btn close btn-unstyled" aria-label="times">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <title>times</title>
            <use xlink:href="icons.svg#times"></use>
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayModal should render the default markup 1`] = `
<div class="fade modal" role="dialog" tabindex="-1">
  <div class="modal-dialog">
    <div class="modal-content"></div>
  </div>
</div>
`;
